# iridium

./: Cargo.toml  README.md
docs/: buffer_persistence_plan.md  config_file_plan.md  integrated_scripting_suite.md  posix_builtin_plan.md
src/: config.rs  control.rs  control_state.rs  lib.rs  main.rs
src/cmd/: bufcmd.rs  mod.rs
src/complete/: completer.rs  handler.rs  helper.rs  hinter.rs  history.rs  mod.rs
src/conf/: loader.rs  mod.rs  model.rs  paths.rs
src/conf/section/: control.rs  mod.rs  persistence.rs  ui.rs
src/editor/: buffer_editor.rs  input.rs  mod.rs  terminal.rs  view.rs
src/process/: alias.rs  cd.rs  exit.rs  help.rs  history.rs  mod.rs  pushd.rs  pwd.rs  type.rs  welcome.rs  which.rs
src/process/builtin/: map.rs  mod.rs
src/store/: buffer.rs  buffer_snapshot.rs  buffer_store.rs  compress.rs  mod.rs
src/store/persistence/: binary.rs  config.rs  crypto.rs  error.rs  manager.rs  mod.rs  pipeline.rs  tests.rs
tests/: cmd.rs  complete.rs  config.rs  control.rs  control_state.rs  editor.rs  persistence_roundtrip.rs  process.rs  store.rs
tests/cmd/: bufcmd.rs
tests/complete/: completer.rs  handler.rs  helper.rs  hinter.rs  history.rs
tests/editor/: buffer_editor.rs  input.rs  terminal.rs  view.rs
tests/process/: alias.rs  cd.rs  exit.rs  help.rs  history.rs  pushd.rs  pwd.rs  type.rs  welcome.rs  which.rs
tests/process/builtin/: map.rs
tests/store/: buffer.rs  buffer_store.rs
