[package]
name = "iridium"
version = "0.1.0"
edition = "2024"

[dependencies]
shlex = "1.3.0"
rev_lines = "0.3.0"
rustyline = "15.0.0"
normalize-path = "0.2.1"
rustyline-derive = "0.11.0"
terminal_size = "0.3"
crossterm = "0.29.0"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
hex = "0.4"
rand_core = "0.6"
pbkdf2 = { version = "0.12", default-features = false, features = ["std", "hmac"] }
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "frame"] }
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.10"
